Introduce new class `DynamicGrid`
The class name is probably not final yet, neither is the path.

--- a/public/css/calendar.less
+++ b/public/css/calendar.less
@@ -259,7 +259,8 @@
     font-weight: normal;
   }
 
-  .calendar-grid.month {
+  .calendar-grid.month,
+  .calendar-grid.dynamic {
     .entry {
       &.two-way-gradient {
         border-radius: 0;
