feat(Widget): add new icon ball style element

--- a/public/css/common.less
+++ b/public/css/common.less
@@ -42,6 +42,26 @@
   }
 }
 
+.icon-ball {
+  .ball();
+  .ball-size-l();
+  .ball-solid(@gray-light);
+
+  color: @text-color;
+  padding: 0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+  i.icon::before {
+    font-size: 0.6em;
+  }
+
+  i.icon.fa-paper-plane::before {
+    margin-right: .2em;
+  }
+}
+
 .contact-ball {
   .ball();
   .ball-size-l();
