Improve source icon placement in incident and event list

--- a/public/css/common.less
+++ b/public/css/common.less
@@ -95,3 +95,11 @@
 .full-width .add-new-component {
   margin: 0 0 1em 1em;
 }
+
+.event-list .list-item,
+.incident-list .list-item {
+  .meta .source-icon {
+    margin-left: auto;
+    margin-right: 0.5em;
+  }
+}
