RotationConfigForm: Implement methods to persist changes in database

--- a/public/css/form.less
+++ b/public/css/form.less
@@ -101,6 +101,10 @@
     align-items: baseline;
   }
 
+  #first-handoff-description {
+    margin: 0 0 0 14em;
+  }
+
   .term-input-area.read-only {
     label.contact,
     label.group {
