--- a/public/css/schedule.less
+++ b/public/css/schedule.less
@@ -39,7 +39,7 @@
     display: flex;
     flex-direction: column;
 
-    .calendar-grid {
+    .time-grid {
       flex: 1 1 auto;
       height: 0;
     }
