Improve event rule configuration layout

--- a/public/css/event-rule-config.less
+++ b/public/css/event-rule-config.less
@@ -1,6 +1,6 @@
 .event-rule-config {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   ul {
     list-style-type: none;
     margin: 0;
@@ -39,11 +39,6 @@
 
   .filter-pipeline {
     display: inline-flex;
-    align-self: flex-start;
-  }
-
-  .filter-pipeline:has(.config-filter .search-controls) {
-    align-items: baseline;
   }
 
   .add-escalation {
@@ -97,7 +92,7 @@
     }
 
     .horizontal-line {
-      min-width: 3.5em;
+      min-width: 3em;
     }
 
     .right-arrow {
@@ -272,6 +267,23 @@
     }
 
     .event-rule-button();
+  }
+}
+
+.filter-pipeline {
+  .horizontal-line,
+  .right-arrow {
+    width: 78/12em;
+  }
+}
+
+.right-arrow:has(+ .filter-wrapper .config-filter.empty-filter) {
+  width: 156/12em
+}
+
+.filter-pipeline:has(.filter-wrapper .config-filter.empty-filter) {
+  .horizontal-line {
+    width: 168/12em;
   }
 }
 
