Contactgroup: Add detail view and make contactgroup editable/removable

--- a/public/css/common.less
+++ b/public/css/common.less
@@ -13,6 +13,7 @@
 }
 
 .controls {
+  &.contactgroup-detail,
   &.event-detail,
   &.incident-detail {
     .box-shadow(0, 0, 0, 1px, @gray-lighter);
