ui: Highlight related entries on the timeline upon hover

--- a/public/css/calendar.less
+++ b/public/css/calendar.less
@@ -335,8 +335,7 @@
   }
 
   .entry {
-    border-width: 1px;
-    border-style: solid;
+    border: 1px solid var(--entry-border-color);
     background-color: var(--entry-bg);
     mix-blend-mode: screen;
     .rounded-corners();
