--- a/public/css/schedule.less
+++ b/public/css/schedule.less
@@ -59,3 +59,15 @@
     flex: 1 1 auto;
   }
 }
+
+/* Design */
+
+.schedule .entry.highlighted {
+  outline: 2px solid var(--entry-border-color);
+  outline-offset: 1px;
+}
+
+.schedule .step.highlighted {
+  background-color: @gray-lighter;
+  border-color: @gray-light;
+}
