Channel: Don't allow to delete channel if in use

--- a/public/css/form.less
+++ b/public/css/form.less
@@ -108,3 +108,11 @@
 .source-form textarea {
   .monospace-font();
 }
+
+.channel-form {
+  .btn-remove:disabled {
+    background: @gray-light;
+    color: @disabled-gray;
+    border-color: transparent;
+  }
+}
