Change css class of .header to .time-grid-header in .timeline

--- a/public/css/timeline.less
+++ b/public/css/timeline.less
@@ -10,7 +10,7 @@
     --primaryRowHeight: 4em;
     position: relative;
 
-    .header {
+    .time-grid-header {
       box-sizing: border-box;
       position: sticky;
       z-index: 1;
@@ -73,12 +73,8 @@
 /* Design */
 
 .timeline {
-  .header {
+  .time-grid-header {
     background: @body-bg-color;
-  }
-
-  .column-title .date {
-    font-size: .75em;
   }
 
   .rotation-name {
