--- a/public/css/calendar.less
+++ b/public/css/calendar.less
@@ -42,14 +42,12 @@
   --primaryRowHeight: 1fr;
   --stepRowHeight: 1fr;
 
-  .header {
-    display: grid;
+  .time-grid-header {
     align-items: flex-end;
     border-left: 1px solid transparent;
     grid-template-columns: repeat(var(--primaryColumns), minmax(var(--minimumPrimaryColumnWidth), 1fr));
 
     .column-title {
-      text-align: center;
       border-right: 1px solid transparent;
     }
   }
@@ -233,7 +231,7 @@
   grid-template-columns: var(--sidebarWidth) minmax(0, 1fr);
   grid-template-rows: var(--headerHeight) minmax(0, 1fr);
 
-  .header {
+  .time-grid-header {
     grid-area: ~"1 / 2 / 3 / 3";
   }
 
@@ -365,11 +363,6 @@
   }
 
   .column-title {
-    .day-name {
-      color: @text-color-light;
-      text-transform: uppercase;
-    }
-
     .day-number {
       font-weight: bold;
       font-size: 1.5em;
