--- a/public/css/common.less
+++ b/public/css/common.less
@@ -12,25 +12,31 @@
   }
 }
 
+.days-header {
+  display: grid;
+
+  .column-title {
+    text-align: center;
+    .date {
+      font-size: 0.75em;
+    }
+
+    .day-name {
+      color: @text-color-light;
+      text-transform: uppercase;
+    }
+  }
+}
+
 .schedules-header {
   margin-left: 12em;
   width: ~"calc(100% - 12em)";
 
-  .header {
-    display: grid;
+  .days-header {
     grid-template-columns: repeat(7, minmax(2em, 1fr));
-    text-transform: uppercase;
 
     .column-title {
-      text-align: center;
       border-right: 1px solid @gray-lighter;
-      .date {
-        font-size: 0.75em;
-      }
-
-      .day-name {
-        color: @text-color-light;
-      }
     }
 
     .column-title:first-of-type {
