--- a/public/css/list/schedule-list.less
+++ b/public/css/list/schedule-list.less
@@ -1,3 +1,18 @@
+// Header
+.schedules-header {
+  margin-left: 12em;
+  width: ~"calc(100% - 12em)";
+
+  .days-header {
+    grid-template-columns: repeat(7, minmax(2em, 1fr));
+    border-left: 2px solid @gray-lighter;
+
+    .column-title {
+      border-right: 1px solid @gray-lighter;
+    }
+  }
+}
+
 // Layout
 .item-list.schedule-list {
   .list-item {
