--- a/public/css/list/schedule-list.less
+++ b/public/css/list/schedule-list.less
@@ -4,6 +4,7 @@
   width: ~"calc(100% - 12em)";
 
   .days-header {
+    display: grid;
     grid-template-columns: repeat(7, minmax(2em, 1fr));
     border-left: 2px solid @gray-lighter;
 
