incidents: Support notification suppression

--- a/public/css/common.less
+++ b/public/css/common.less
@@ -99,8 +99,7 @@
 
 .event-list .list-item,
 .incident-list .list-item {
-  .meta .source-icon {
-    margin-left: auto;
+  .meta > :not(:last-child) {
     margin-right: 0.5em;
   }
 }
