css: Increase specificity of schedule list rules

--- a/public/css/list/schedule-list.less
+++ b/public/css/list/schedule-list.less
@@ -38,7 +38,7 @@
       }
     }
 
-    .time-grid {
+    .timeline .time-grid {
       grid-template-columns: minmax(0, 1fr);
       grid-template-rows: minmax(0, 1fr);
 
@@ -63,7 +63,7 @@
 }
 
 // Design
-.schedule-list {
+.schedule-list .timeline {
   .time-grid {
     .grid {
       .step {
