--- a/public/css/timeline.less
+++ b/public/css/timeline.less
@@ -3,18 +3,22 @@
 .timeline {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 
   .time-grid {
     --sidebarWidth: 12em;
     --stepRowHeight: 4em;
     --primaryRowHeight: 4em;
+    --daysHeaderHeight: 3em;
     position: relative;
+    margin-right: 1em; // make midnight timestamp visible
 
     .time-grid-header {
       box-sizing: border-box;
       position: sticky;
       z-index: 1;
       top: 0;
+      height: var(--daysHeaderHeight);
     }
 
     .row-title {
@@ -65,9 +69,58 @@
       display: block;
       border-top: 1px solid black;
       position: absolute;
-      bottom: var(--stepRowHeight);
       right: 0;
       left: 0;
+      // -1 to exclude result row
+      top: ~"calc((var(--stepRowHeight) * calc(var(--primaryRows) - 1)) + var(--daysHeaderHeight))";
+    }
+
+    .timescale {
+      display: grid;
+      grid-template-columns: repeat(~"calc(var(--primaryColumns) * var(--timestampsPerDay))", minmax(0,1fr));
+      border-left: 1px solid @gray-lighter; // this is required to maintain the grid layout
+      grid-area: ~"4 / 2 / 4 / 3";
+
+      .ticks {
+        position: relative;
+        border-right: 1px solid @gray-lighter;
+        border-left: 1px solid @gray-lighter;
+
+        &:after { // overlaps the unnecessary part of border-left
+          content: '';
+          position: absolute;
+          top: 0.25em;
+          left: -1px; // overlap the border-left
+          right: 0;
+          bottom: 0;
+          background: @body-bg-color;
+        }
+      }
+
+      .timestamp {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 0.5em;
+        padding-top: 0.5em;
+        font-size: .5em;
+        position: relative;
+        left: -50%;
+        line-height: 1;
+
+        &.midnight {
+          left: 50%;
+        }
+
+        > span:last-child {
+          opacity: 0.5;
+        }
+      }
+
+      span:nth-last-of-type(2), // last .ticks before .midnight
+      .midnight {
+        grid-area: ~"1 / -2 / 1 / -1";
+      }
     }
   }
 }
@@ -134,6 +187,11 @@
     font-size: .75em;
     opacity: .8;
   }
+
+  .timescale .timestamp {
+    color: @gray-semilight;
+    background: @body-bg-color;
+  }
 }
 
 .timeline.minimal-layout .empty-notice {
@@ -142,4 +200,8 @@
 
 .days-header .column-title .date {
   font-size: .75em;
+}
+
+#layout.twocols .schedule .timescale:has(:nth-child(n+62)) { // month view (--timestampsPerDay * --primaryColumns = 62)
+  display: none;
 }
