Rotation Drag: Make only the `hamburger` icon a drag handle
Only the icon should allow the drag, not the entire .rotation-name element

--- a/public/css/timeline.less
+++ b/public/css/timeline.less
@@ -80,13 +80,14 @@
   .rotation-name {
     font-size: 1.25em;
     font-weight: bold;
-    cursor: grab;
 
     [data-drag-initiator] {
       color: @gray-light;
-    }
-    &:hover [data-drag-initiator] {
-      color: @text-color;
+
+      &:hover {
+        cursor: grab;
+        color: @list-item-title-hover-color;
+      }
     }
 
     // :not(:empty) is only necessary to increase specificity
