ContactForm: Show suggestions while typing in `user` element
ContactControler: Add suggestion action and cleanup code

--- a/public/css/form.less
+++ b/public/css/form.less
@@ -172,7 +172,9 @@
   }
 }
 
-.contact-form hr {
-  border: none;
-  border-top: 1px solid @gray-light;
+.contact-form {
+  hr {
+    border: none;
+    border-top: 1px solid var(--gray-light, @gray-light);
+  }
 }
