Highlight related sidebar row when result `.entry` is hovered

--- a/public/css/schedule.less
+++ b/public/css/schedule.less
@@ -54,12 +54,20 @@
 
 /* Design */
 
-.schedule-detail .entry.highlighted {
-  outline: 2px solid var(--entry-border-color);
-  outline-offset: 1px;
-}
+.schedule-detail {
+  .entry.highlighted {
+    outline: 2px solid var(--entry-border-color);
+    outline-offset: 1px;
+  }
 
-.schedule-detail .step.highlighted {
-  background-color: @gray-lighter;
-  border-color: @gray-light;
+  .sidebar .row-title.highlighted,
+  .step.highlighted {
+    background-color: @gray-lighter;
+    border-color: @gray-light;
+  }
+
+  .sidebar .row-title.highlighted {
+    margin-top: -1px; // cover the border-top area
+    padding-top: 1px;
+  }
 }
