Introduce class IncidentRenderer
- Remove obsolete code

--- a/public/css/common.less
+++ b/public/css/common.less
@@ -96,9 +96,9 @@
   margin: 0 0 1em 1em;
 }
 
-.event-list .list-item,
-.incident-list .list-item {
-  .meta > :not(:last-child) {
+.item-layout.event,
+.item-layout.incident {
+  .extended-info > :not(:last-child) {
     margin-right: 0.5em;
   }
 }
