--- a/public/css/common.less
+++ b/public/css/common.less
@@ -96,9 +96,19 @@
   margin: 0 0 1em 1em;
 }
 
+.item-layout.rule,
 .item-layout.event,
 .item-layout.incident {
   .extended-info > :not(:last-child) {
+    margin-right: 0.5em;
+  }
+}
+
+.item-layout.rule footer {
+  justify-content: end;
+  align-items: baseline;
+
+  > :not(:last-child) {
     margin-right: 0.5em;
   }
 }
