--- a/public/css/list/schedule-list.less
+++ b/public/css/list/schedule-list.less
@@ -3,6 +3,9 @@
   margin-left: 12em;
   width: ~"calc(100% - 12em)";
 
+  padding-right: 2em; // align the header with the list items
+  padding-left: 0.5em;
+
   .days-header {
     display: grid;
     grid-template-columns: repeat(7, minmax(2em, 1fr));
@@ -15,47 +18,45 @@
 }
 
 // Layout
-.item-list.schedule-list {
-  .list-item {
-    .main {
-      display: flex;
-      align-items: center;
-      header .title {
-        width: 10em;
-        display: inline-flex;
-      }
-
-      .caption {
-        display: flex;
-        margin-left: 0.5em;
-        width: 100%;
-        height: 2em;
-        align-items: center;
-
-        > .timeline {
-          flex-grow: 1;
-        }
-      }
+.item-list .schedule-item {
+  .main {
+    display: flex;
+    align-items: center;
+    header .title {
+      width: 10em;
+      display: inline-flex;
     }
 
-    .timeline .time-grid {
-      grid-template-columns: minmax(0, 1fr);
-      grid-template-rows: minmax(0, 1fr);
+    .caption {
+      display: flex;
+      margin-left: 0.5em;
+      width: 100%;
+      height: 2em;
+      align-items: center;
 
-      .grid {
-        border-width: 0 0 0 2px;
+      > .timeline {
+        flex-grow: 1;
       }
+    }
+  }
 
-      .grid,
-      .overlay {
-        grid-area: ~"1 / 1 / 2 / 2";
+  .timeline .time-grid {
+    grid-template-columns: minmax(0, 1fr);
+    grid-template-rows: minmax(0, 1fr);
 
-        .entry {
-          margin: 0;
+    .grid {
+      border-width: 0 0 0 2px;
+    }
 
-          .title {
-            align-items: center;
-          }
+    .grid,
+    .overlay {
+      grid-area: ~"1 / 1 / 2 / 2";
+
+      .entry {
+        margin: 0;
+
+        .title {
+          align-items: center;
         }
       }
     }
@@ -63,7 +64,7 @@
 }
 
 // Design
-.schedule-list .timeline {
+.item-list .schedule-item .timeline {
   .time-grid {
     .grid {
       .step {
