--- a/public/css/detail/incident-detail.less
+++ b/public/css/detail/incident-detail.less
@@ -11,18 +11,16 @@
     }
   }
 
-  .incident-contact-list {
-    .list-item {
-      &:not(:first-child) > .main {
-        border-top: 0;
-      }
+  .list-item.incident-contact {
+    &:not(:first-child) > .main {
+      border-top: 0;
+    }
 
-      .visual {
-        align-self: center;
+    .visual {
+      align-self: center;
 
-        i.icon {
-          font-size: 1em;
-        }
+      i.icon {
+        font-size: 1em;
       }
     }
   }
