Timeline: Add title to `drag-handle` of the rotation title and fix css

--- a/public/css/timeline.less
+++ b/public/css/timeline.less
@@ -26,13 +26,6 @@
       align-items: center;
       justify-content: space-between;
 
-      > span {
-        width: 0;
-        flex: 1 0 auto;
-        margin-left: .5em;
-        .text-ellipsis();
-      }
-
       > a {
         display: flex;
         width: 100%;
@@ -198,16 +191,12 @@
     > a {
       text-decoration: none;
 
-      i {
-        display: none;
-      }
-
       &:hover {
         color: @list-item-title-hover-color;
+      }
 
-        i {
-          display: inline-block;
-        }
+      &:not(:hover) .icon {
+        display: none;
       }
     }
   }
