Move Schedule class to detail and rename it to ScheduleDetail
- Rename css class to `schedule-detail`
_ Move the schedule controls

--- a/public/css/schedule.less
+++ b/public/css/schedule.less
@@ -14,7 +14,7 @@
   }
 }
 
-.schedule {
+.schedule-detail {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -58,12 +58,12 @@
 
 /* Design */
 
-.schedule .entry.highlighted {
+.schedule-detail .entry.highlighted {
   outline: 2px solid var(--entry-border-color);
   outline-offset: 1px;
 }
 
-.schedule .step.highlighted {
+.schedule-detail .step.highlighted {
   background-color: @gray-lighter;
   border-color: @gray-light;
 }
