--- a/public/css/timeline.less
+++ b/public/css/timeline.less
@@ -236,6 +236,6 @@
   padding-bottom: .25em;
 }
 
-#layout.twocols .schedule .timescale:has(:nth-child(n+62)) { // month view (--timestampsPerDay * --primaryColumns = 62)
+#layout.twocols .schedule-detail .timescale:has(:nth-child(n+62)) { // month view (--timestampsPerDay * --primaryColumns = 62)
   display: none;
 }
