ScheduleRenderer: Use `schedule` as css class

--- a/public/css/list/schedule-list.less
+++ b/public/css/list/schedule-list.less
@@ -18,7 +18,7 @@
 }
 
 // Layout
-.item-list .schedule-item {
+.item-list .schedule {
   .main {
     display: flex;
     align-items: center;
@@ -64,7 +64,7 @@
 }
 
 // Design
-.item-list .schedule-item .timeline {
+.item-list .schedule .timeline {
   .time-grid {
     .grid {
       .step {
