--- a/public/css/list/schedule-list.less
+++ b/public/css/list/schedule-list.less
@@ -1,10 +1,8 @@
 // Header
 .schedules-header {
   margin-left: 12em;
-  width: ~"calc(100% - 12em)";
-
-  padding-right: 2em; // align the header with the list items
-  padding-left: 0.5em;
+  margin-right: 1em;
+  width: ~"calc(100% - 13em)"; // margin-left + margin-right
 
   .days-header {
     display: grid;
@@ -29,7 +27,6 @@
 
     .caption {
       display: flex;
-      margin-left: 0.5em;
       width: 100%;
       height: 2em;
       align-items: center;
