--- a/public/css/common.less
+++ b/public/css/common.less
@@ -80,6 +80,12 @@
 
 .add-new-component {
   margin: 0 0 1em 1em;
+
+  &:is(div) {
+    display: flex;
+    gap: .5em;
+    align-items: baseline;
+  }
 }
 
 .item-layout.rule footer {
