EventRuleController: Refine implementation

--- a/public/css/detail/event-rule-detail.less
+++ b/public/css/detail/event-rule-detail.less
@@ -1,14 +1,7 @@
 .event-rule-detail {
-  display: flex;
-  align-items: baseline;
-}
-
-.cache-notice {
-  margin: 1em;
-  padding: 1em;
-  background-color: @gray-lighter;
-  text-align: center;
-  .rounded-corners();
+  .empty-state-bar {
+    margin-bottom: 1em;
+  }
 }
 
 .new-event-rule {
