FutureEntry: Simplify implementation
If it's not an `.entry`, that's fine. But making the
child one, is not. Only children of the overlay must
be entries. If style rules apply, copy them over.

--- a/public/css/timeline.less
+++ b/public/css/timeline.less
@@ -65,8 +65,12 @@
       .future-entry {
         display: flex;
         justify-content: end;
+        z-index: 2; // overlap the .clock .time-hand
+        pointer-events: all;
 
-        .entry {
+        > div {
+          margin-top: 1em;
+          margin-bottom: 1em;
           display: flex;
           align-items: center;
           justify-content: end;
