FutureEntry: Let CSS handle its border color

--- a/public/css/timeline.less
+++ b/public/css/timeline.less
@@ -84,7 +84,7 @@
             content: '';
             display: block;
             position: absolute;
-            border: 1px solid var(--entry-border-color);
+            border: 1px solid @gray-light;
             top: -1px;
             bottom: -1px;
             left: 2px;
