--- a/public/css/timeline.less
+++ b/public/css/timeline.less
@@ -74,26 +74,35 @@
           display: flex;
           align-items: center;
           justify-content: end;
-          flex-shrink: 0;
           position: relative;
-          padding-right: .25em;
           width: 3em;
 
-          &:before,
-          &:after {
+          .outline {
             content: '';
             display: block;
             position: absolute;
             border: 1px solid @gray-light;
+            border-right-width: 0;
             top: -1px;
             bottom: -1px;
-            left: 2px;
             width: 100%;
-            .rounded-corners(0.25em);
+            .rounded-corners(0.25em 0 0 0.25em);
           }
 
-          &:after {
-            left: 5px; // 2px before + 1px border + 2px after
+          .icon {
+            color: @gray;
+          }
+
+          .outline:nth-of-type(1) {
+            left: -1px; // Dock at the grid border
+          }
+
+          .outline:nth-of-type(2) {
+            left: 3px; // 4px gap
+          }
+
+          .outline:nth-of-type(3) {
+            left: 7px; // Same gap
           }
         }
       }
