ScheduleDetail: Show an info message for empty schedules

--- a/public/css/schedule.less
+++ b/public/css/schedule.less
@@ -33,6 +33,21 @@
       }
     }
   }
+
+  .from-scratch-hint {
+    display: flex;
+    align-items: center;
+    font-size: 1.25em;
+
+    i.icon {
+      float: left;
+      font-size: 1.5em;
+    }
+
+    div {
+      margin: 0 auto;
+    }
+  }
 }
 
 .schedule-container {
@@ -66,4 +81,11 @@
 .schedule-detail .step.highlighted {
   background-color: @gray-lighter;
   border-color: @gray-light;
+}
+
+.schedule-detail .from-scratch-hint {
+  .rounded-corners();
+  border: 1px solid @gray-light;
+  padding: .5em;
+  color: @text-color-light;
 }
