--- a/public/css/schedule.less
+++ b/public/css/schedule.less
@@ -8,10 +8,6 @@
   h2 {
     display: inline;
   }
-
-  > a:last-of-type {
-    float: right;
-  }
 }
 
 .schedule-detail {
@@ -37,7 +33,7 @@
   .from-scratch-hint {
     display: flex;
     align-items: center;
-    font-size: 1.25em;
+    font-size: 14/12em;
 
     i.icon {
       float: left;
