--- a/public/css/timeline.less
+++ b/public/css/timeline.less
@@ -146,7 +146,6 @@
         }
 
         &:hover {
-          mix-blend-mode: normal;
           .rotation-info {
             z-index: 1;
             display: flex;
@@ -301,7 +300,6 @@
 
       .new-rotation-content {
         pointer-events: all;
-        z-index: 2; // Grid gaps must not bleed through, in day mode the time-hand must be below the button
         height: var(--stepRowHeight);
         display: flex;
         align-items: baseline;
@@ -309,6 +307,10 @@
         align-content: center;
         flex-wrap: wrap;
         gap: .417em;
+
+        > span {
+          z-index: 2; // Grid gaps must not bleed through, in day mode the time-hand must be below the button
+        }
       }
     }
   }
