calendar.less: Fix incorrect header row template

--- a/public/css/calendar.less
+++ b/public/css/calendar.less
@@ -230,7 +230,7 @@
 .time-grid {
   display: grid;
   grid-template-columns: var(--sidebarWidth) minmax(0, 1fr);
-  grid-template-rows: var(--headerHeight) minmax(0, 1fr);
+  grid-template-rows: var(--headerHeight) var(--headerHeight) minmax(0, 1fr);
 
   .time-grid-header {
     grid-area: ~"1 / 2 / 3 / 3";
