--- a/public/css/form.less
+++ b/public/css/form.less
@@ -33,50 +33,40 @@
 
 .rotation-config {
   .rotation-mode {
-    width: 50em;
-    padding: .5em 1em;
-    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    flex: 1 1 auto;
+    list-style: none;
+    margin: 0 1em 0 0;
+    padding: 0;
 
-    h2 {
-      margin: 0;
+    li {
+      flex: 1 1 auto;
+      width: 0;
+
+      &:not(:last-child) {
+        margin-right: 1em;
+      }
     }
 
-    ul {
+    label {
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
+      width: auto;
 
-      list-style: none;
-      margin: 0;
-      padding: 0;
-
-      li {
-        flex: 1 1 auto;
-        width: 0;
-
-        &:not(:last-child) {
-          margin-right: 1em;
-        }
+      input {
+        display: none;
       }
 
-      label {
-        display: flex;
-        flex-direction: column;
-        width: auto;
-
-        input {
-          display: none;
-        }
-
-        .mode-img {
-          width: 8em;
-          margin-bottom: .5em;
-          outline: 3px solid @icinga-blue;
-        }
+      .mode-img {
+        width: 8em;
+        margin-bottom: .5em;
+        outline: 3px solid @icinga-blue;
       }
     }
   }
 
-  .control-group {
+  .control-group:not(:has(.rotation-mode)) {
     align-items: baseline;
   }
 
@@ -133,6 +123,7 @@
   }
 
   .rotation-mode {
+    padding: .75em;
     border: 1px solid @gray-light;
     .rounded-corners();
 
