source: Require confirmation to delete sources
Sources are such an integral part, that their deletion
should not be possible with a single click. Now even
more so, as this results in all event rules being
dropped as well.

refs #249

--- a/public/css/form.less
+++ b/public/css/form.less
@@ -100,6 +100,11 @@
   p.description {
     color: @text-color-light;
   }
+
+  .form-controls .button-link {
+    // Let a button-link in form controls look like a submit button
+    .button();
+  }
 }
 
 .rotation-mode {
