Add `TimezonePicker` control
A dropdown menu to pick a timezone.

--- a/public/css/form.less
+++ b/public/css/form.less
@@ -84,6 +84,15 @@
   }
 }
 
+.timezone-picker {
+  display: inline;
+  margin-left: 1em;
+
+  .icinga-controls {
+    display: inline;
+  }
+}
+
 /* Style */
 
 .icinga-controls {
