add and adjust styles for flyout info of entries

--- a/public/css/schedule.less
+++ b/public/css/schedule.less
@@ -49,7 +49,7 @@
 .schedule-container {
   flex: 1 1 auto;
   display: flex;
-  overflow: auto;
+  overflow: visible;
 
   .calendar {
     flex: 1 1 auto;
